--- a/script_config.json
+++ b/script_config.json
@@ -32,8 +32,10 @@
         "doorsKeyMode": false,
         "gatesKeyMode": true,
         "gatesKeyOnlyInVehicle": true,
-        "doorsKey": "E",
-        "gatesKey": "E",
+        "doorsFivemKey": "E",
+        "gatesFivemKey": "E",
+        "doorsRedmKey": "0x760A9C6F",
+        "gatesRedmKey": "0x760A9C6F",
         "doorsKeyCFGMenssage": "Abrir/Fechar Portas",
         "gatesKeyCFGMenssage": "Abrir/Fechar Portões",
         "doorsForceClose": false,
